# cache

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.circleci/: config.yml
dev/: build-shell.sh  download-thirdparty.sh  trim-trace.sh
dev/ci-docker/: Dockerfile
examples/: example.cc
src/: CMakeLists.txt  build-test.cc  cache.cc
src/bench/: bench-cache.cc  bench-util.h  bench.cc  key-perf.cc  plot-evict-miss.gp  plot.sh  trace-reader.cc
src/cache/: arc.h  cache.h  flex-arc.h  lru.h  tiered-cache.h
src/include/: arc.h  cache.h  flex-arc.h  lru.h  stats.h  tunable-arc.h
src/util/: belady.h  build-check.cc  compare.cc  compare.h  compiler-util.h  lock.cc  lock.h  nop-lock.h  table-printer.cc  table-printer.h  trace-gen.cc  trace-gen.h
test/: CMakeLists.txt  arc-test.cc  belady-test.cc  cache-compare-test.cc  example-test.cc  flex-arc-test.cc  lru-test.cc  trace-gen-test.cc  tunable-arc-test.cc
traces/raw/: trace-test
traces/trimmed/: trace-test
